# Bacsy-DBus

./: CMakeLists.txt  README.md
cmake/: FindBacsy.cmake  FindDBusCpp.cmake  Findrsync.cmake
src/: BacsyClient.cpp  BacsyClient.h  BacsyServer.cpp  BacsyServer.h  CMakeLists.txt  bacsy-introspect.xml  main.cpp
